src/test/deca/syntax/invalid/parser/with_object/class_extends_not_ident.deca
class A extends 0a {}